test/corpus/L1/positive/literal-integer-negative.st
"---
kind: positive
section: literal.integer
note: negative integer literal
---"

-42
