test/corpus/L1/negative/radix-digit-invalid.st
"---
kind: negative
section: error.radix-digit
codes: E_RADIX_DIGIT
---"
2r2
